# html-linter

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/checks/: attributes.rs  content.rs  count.rs  custom.rs  mod.rs  presence.rs  semantics.rs  structure.rs
src/dom/: index.rs  mod.rs  select.rs  utils.rs
tests/: button_tests.rs  eslint_tests.rs  html_linter_tests.rs  image_tests.rs  img_alt_tests.rs  inline_styles_tests.rs  link_tests.rs  seo_tests.rs
